# Xcys

./: Cargo.toml  README.md  build.rs  xcys.toml
src/: builtin.rs  color.rs  command.rs  error.rs  main.rs  toml.rs
wix/: main.wxs
