[package]
name = "xcys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = {version = "0.26.0", features = ["event-stream"]}
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }
futures-timer = "3.0.2"
whoami = "1.3.0"

async-process = "1.6.0"
dirs = "4.0.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
ProductName = "XCYS"
OriginalFilename = "xcys.exe"
ProductVersion = "0.1.0.0"
LegalCopyright = "Copyright © 2023"
FileDescription = "XCYS"

